--- a/nime-template.tex
+++ b/nime-template.tex
@@ -13,16 +13,94 @@
 
 \documentclass{nime-alternate}
 
-\usepackage{xcolor}
 \usepackage{soul}
-\sethlcolor{black}
+\usepackage{tikz}
+\usetikzlibrary{calc}
+
 \makeatletter
-\newif\if@blind
-\@blindtrue %use \@blindfalse on final version. Just uncomment line below
-%\@blindfalse
-\if@blind \sethlcolor{black}\else
-\let\hl\relax
+\newif\if@anonymize
+
+\@anonymizetrue    % Uncomment to hide text
+%\@anonymizefalse  % Uncomment to show text
+
+\if@anonymize
+\newcommand{\highlight@DoHighlight}{
+	\fill [outer sep = -15pt, inner sep = 0pt, color=black]
+	($(begin highlight)+(0,8pt)$) rectangle ($(end highlight)+(0,-3pt)$) ;
+}
+
+\newcommand{\highlight@BeginHighlight}{
+	\coordinate (begin highlight) at (0,0) ;
+}
+
+\newcommand{\highlight@EndHighlight}{
+	\coordinate (end highlight) at (0,0) ;
+}
+
+\newdimen\highlight@previous
+\newdimen\highlight@current
+\newlength{\item@width}
+
+\DeclareRobustCommand*\anonymize{%
+	\SOUL@setup
+	\def\SOUL@preamble{%
+		\begin{tikzpicture}[overlay, remember picture]
+		\highlight@BeginHighlight
+		\highlight@EndHighlight
+		\end{tikzpicture}%
+	}%
+	%
+	\def\SOUL@postamble{%
+		\begin{tikzpicture}[overlay, remember picture]
+		\highlight@EndHighlight
+		\highlight@DoHighlight
+		\end{tikzpicture}%
+	}%
+	%
+	\def\SOUL@everyhyphen{%
+		\discretionary{%
+			\SOUL@setkern\SOUL@hyphkern
+			\SOUL@sethyphenchar
+			\tikz[overlay, remember picture] \highlight@EndHighlight ;%
+		}{%
+		}{%
+			\SOUL@setkern\SOUL@charkern
+		}%
+	}%
+	%
+	\def\SOUL@everyexhyphen##1{%
+		\SOUL@setkern\SOUL@hyphkern
+		\settowidth{\item@width}{##1}%
+		\makebox[\item@width]{}%
+		\discretionary{%
+			\tikz[overlay, remember picture] \highlight@EndHighlight ;%
+		}{%
+		}{%
+			\SOUL@setkern\SOUL@charkern
+		}%
+	}%
+	%
+	\def\SOUL@everysyllable{%
+		\begin{tikzpicture}[overlay, remember picture]
+		\path let \p0 = (begin highlight), \p1 = (0,0) in \pgfextra
+		\global\highlight@previous=\y0
+		\global\highlight@current =\y1
+		\endpgfextra (0,0) ;
+		\ifdim\highlight@current < \highlight@previous
+		\highlight@DoHighlight
+		\highlight@BeginHighlight
+		\fi
+		\end{tikzpicture}%
+		\settowidth{\item@width}{\the\SOUL@syllable}%
+		\makebox[\item@width]{}%
+		\tikz[overlay, remember picture] \highlight@EndHighlight ;%
+	}%
+	\SOUL@
+}
+\else
+\newcommand{\anonymize}[1]{#1}
 \fi
+\makeatother
 
 \begin{document}
 %
@@ -30,7 +108,7 @@
 %\conferenceinfo{NIME'17,}{May 15-19, 2017, Aalborg University Copenhagen, Denmark.}
 \conferenceinfo{NIME'18,}{June 3-6, 2018, Blacksburg, Virginia, USA.}
 
-\title{NIME Proceedings Template for \hl{LaTeX}}
+\title{NIME Proceedings \anonymize{Template} for \anonymize{LaTeX}}
 
 %
 % You need the command \numberofauthors to handle the 'placement
@@ -140,7 +218,7 @@ Preparing ACM SIG Proceedings Using \LaTeX$2_\epsilon$\ and Bib\TeX}.
 This source file has been written with the intention of being
 compiled under \LaTeX$2_\epsilon$\ and BibTeX.
 
-To make best use of this sample document, run it through \LaTeX\
+To make best use of this sample \anonymize{document}, run it through \LaTeX\
 and BibTeX, and compare this source code with your compiled PDF file. A compiled PDF version is available to help you with the `look and feel.'  \textbf{The paper submitted to the NIME conference must be stored in an \underline{A4}-sized PDF file, so North Americans should take care not to inadvertently generate \underline{letter} paper-sized PDF files.}  This paper template should prevent that from happening if the \texttt{pdflatex} program is used to generate the PDF file.
 
 The abstract should preferably be between 100 and 200 words.
