Functions moved into class file

--- a/nime-template.tex
+++ b/nime-template.tex
@@ -10,97 +10,12 @@
 % Based on "sig-alternate.tex" V1.9 April 2009
 % This file should be compiled with "nime-alternate.cls"
 
-
 \documentclass{nime-alternate}
 
-\usepackage{soul}
-\usepackage{tikz}
-\usetikzlibrary{calc}
-
-\makeatletter
-
-
-\@anonymizetrue    % Uncomment to hide text
+%\makeatletter
 %\@anonymizefalse  % Uncomment to show text
 
-\if@anonymize
-\newcommand{\highlight@DoHighlight}{
-	\fill [outer sep = -15pt, inner sep = 0pt, color=black]
-	($(begin highlight)+(0,8pt)$) rectangle ($(end highlight)+(0,-3pt)$) ;
-}
-
-\newcommand{\highlight@BeginHighlight}{
-	\coordinate (begin highlight) at (0,0) ;
-}
-
-\newcommand{\highlight@EndHighlight}{
-	\coordinate (end highlight) at (0,0) ;
-}
-
-\newdimen\highlight@previous
-\newdimen\highlight@current
-\newlength{\item@width}
-
-\DeclareRobustCommand*\anonymize{%
-	\SOUL@setup
-	\def\SOUL@preamble{%
-		\begin{tikzpicture}[overlay, remember picture]
-		\highlight@BeginHighlight
-		\highlight@EndHighlight
-		\end{tikzpicture}%
-	}%
-	%
-	\def\SOUL@postamble{%
-		\begin{tikzpicture}[overlay, remember picture]
-		\highlight@EndHighlight
-		\highlight@DoHighlight
-		\end{tikzpicture}%
-	}%
-	%
-	\def\SOUL@everyhyphen{%
-		\discretionary{%
-			\SOUL@setkern\SOUL@hyphkern
-			\SOUL@sethyphenchar
-			\tikz[overlay, remember picture] \highlight@EndHighlight ;%
-		}{%
-		}{%
-			\SOUL@setkern\SOUL@charkern
-		}%
-	}%
-	%
-	\def\SOUL@everyexhyphen##1{%
-		\SOUL@setkern\SOUL@hyphkern
-		\settowidth{\item@width}{##1}%
-		\makebox[\item@width]{}%
-		\discretionary{%
-			\tikz[overlay, remember picture] \highlight@EndHighlight ;%
-		}{%
-		}{%
-			\SOUL@setkern\SOUL@charkern
-		}%
-	}%
-	%
-	\def\SOUL@everysyllable{%
-		\begin{tikzpicture}[overlay, remember picture]
-		\path let \p0 = (begin highlight), \p1 = (0,0) in \pgfextra
-		\global\highlight@previous=\y0
-		\global\highlight@current =\y1
-		\endpgfextra (0,0) ;
-		\ifdim\highlight@current < \highlight@previous
-		\highlight@DoHighlight
-		\highlight@BeginHighlight
-		\fi
-		\end{tikzpicture}%
-		\settowidth{\item@width}{\the\SOUL@syllable}%
-		\makebox[\item@width]{}%
-		\tikz[overlay, remember picture] \highlight@EndHighlight ;%
-	}%
-	\SOUL@
-}
-\else
-\newcommand{\anonymize}[1]{#1}
-\fi
-\makeatother
+%\makeatother
 
 \begin{document}
 %
