Anonymised additional authors

--- a/nime-template.tex
+++ b/nime-template.tex
@@ -107,9 +107,9 @@ one who did all the really hard work.}\\
 % author on the opening page (as the 'third row') but we ask,
 % for aesthetic reasons that you place these 'additional authors'
 % in the \additional authors block, viz.
-\additionalauthors{Additional authors: John Smith (The Th{\o}rv{\"a}ld Group,
-email: {\texttt{jsmith@affiliation.org}}) and Julius P.~Kumquat
-(K. Consortium, email: {\texttt{jpkumquat@consortium.net}}).}
+\additionalauthors{Additional authors: \anonymize{John Smith (The Th{\o}rv{\"a}ld Group,}
+email: {\texttt{\anonymize{jsmith@affiliation.org}}}) and \anonymize{Julius P.~Kumquat
+(K. Consortium,} email: {\texttt{\anonymize{jpkumquat@consortium.net}}}).}
 \date{30 July 1999}
 % Just remember to make sure that the TOTAL number of authors
 % is the number that will appear on the first page PLUS the
