Moved back into package

--- a/anonymize.sty
+++ b/anonymize.sty
@@ -3,6 +3,9 @@
 
 % the basis for this code was found at https://tex.stackexchange.com/questions/41995/efficient-ways-to-anonymize-a-document/42090 
 
+% look at folloiwng for more examles
+% https://tex.stackexchange.com/questions/59659/nigrification-of-references-for-double-blind-refereeing/59719#59719
+
 \RequirePackage{anonymize}
 
 \usepackage{soul}
