--- a/nime-template.tex
+++ b/nime-template.tex
@@ -10,8 +10,10 @@
 % Based on "sig-alternate.tex" V1.9 April 2009
 % This file should be compiled with "nime-alternate.cls"
 
-\documentclass[blind]{nime-alternate} % Comment out when publishing
-%\documentclass[publish]{nime-alternate} % Uncomment when publishing final version
+%\documentclass[blind]{nime-alternate} % Comment out when publishing final version
+\documentclass[publish]{nime-alternate} % Uncomment when publishing final version
+
+\usepackage[blind]{anonymize}
 
 \begin{document}
 %
