Corrected Package name

--- a/anonymize.sty
+++ b/anonymize.sty
@@ -1,12 +1,12 @@
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
-\ProvidesPackage{custom}[2013/01/13 Custom Package]
+\ProvidesPackage{anonymize}[2013/01/13 Custom Package]
 
 % the basis for this code was found at https://tex.stackexchange.com/questions/41995/efficient-ways-to-anonymize-a-document/42090 
 
 % look at folloiwng for more examles
 % https://tex.stackexchange.com/questions/59659/nigrification-of-references-for-double-blind-refereeing/59719#59719
 
-\RequirePackage{anonymize}
+%\RequirePackage{anonymize}
 
 \usepackage{soul}
 \usepackage{tikz}
