--- a/nime-template.tex
+++ b/nime-template.tex
@@ -14,6 +14,8 @@
 \documentclass[publish]{nime-alternate} % Uncomment when publishing final version
 
 \usepackage[blind]{anonymize}
+%\usepackage[publish]{anonymize}
+
 
 \begin{document}
 %
