--- a/anonymize.sty
+++ b/anonymize.sty
@@ -1,19 +1,25 @@
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
 \ProvidesPackage{anonymize}[2013/01/13 Custom Package]
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%this package will blacken out the text included inside the anonymize function if the blind option is set
+% Author Angelo Fraietta
+% Univeristy of New South Wales
+% 10 June 2018
+%
+%   usage 
+%   \usepackage[blind]{anonymize} will blacken text inside function \anonymize{text}
+%   \usepackage{anonymize} will not modify text inside function \anonymize{text}
+%
+%
 % the basis for this code was found at https://tex.stackexchange.com/questions/41995/efficient-ways-to-anonymize-a-document/42090 
-
-% look at folloiwng for more examles
-% https://tex.stackexchange.com/questions/59659/nigrification-of-references-for-double-blind-refereeing/59719#59719
-
-%\RequirePackage{anonymize}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \usepackage{soul}
 \usepackage{tikz}
 \usepackage{calc}
 \usetikzlibrary{calc}
 
-%\newif\if@anonymize
 
 \makeatletter
 %% Global indentation option
@@ -32,6 +38,7 @@
 \newlength{\item@width}
 
 \if@anonymize
+
 \newcommand{\highlight@DoHighlight}{
 	\fill [outer sep = -15pt, inner sep = 0pt, color=black]
 	($(begin highlight)+(0,8pt)$) rectangle ($(end highlight)+(0,-3pt)$) ;
