--- a/nime-template.tex
+++ b/nime-template.tex
@@ -1,5 +1,5 @@
 % Template for NIME 2018
-%
+% Modified by Angelo Fraietta 10 June 2018
 % Modified by Luke Dahl on 17 October 2-17
 % Modified by Cumhur Erkut on <2016-10-11 Tue>
 % Modified by Edgar Berdahl on 5 November 2014
@@ -11,23 +11,20 @@
 % This file should be compiled with "nime-alternate.cls"
 
 \documentclass{nime-alternate} % Uncomment when publishing final version
-
 \usepackage{etoolbox}
-\makeatletter
+\newtoggle{blindreview}
+\togglefalse{blindreview} % Leave this intact as it is our default
 
-\newtoggle{anonbibliography}
-%you have to watch out here because if you are doing the swap on your bibliography, it appears cached, so you need to do clean all auxilary files and then compile again
-\toggletrue{anonbibliography}
-%\togglefalse{anonbibliography}
 
-\iftoggle{anonbibliography}{%
+% uncomment this line to make blind
+%\toggletrue{blindreview} 
+
+
+\iftoggle{blindreview}{%
 	\usepackage[blind]{anonymize}
 }{%
 	\usepackage{anonymize}
 }
-\makeatother
-
-%\usepackage{anonymize}
 
 
 \begin{document}
@@ -138,7 +135,7 @@ email: {\texttt{\anonymize{jsmith@affiliation.org}}}) and \anonymize{Julius P.~K
 \begin{abstract}
 This paper provides a sample of a \LaTeX\ document for the NIME conference series. It conforms,
 somewhat loosely, to the formatting guidelines for
-\anonymize{ACM SIG Proceedings}. It is an {\em alternate} style which produces
+ACM SIG Proceedings. It is an {\em alternate} style which produces
 a {\em tighter-looking} paper and was designed in response to
 concerns expressed, by authors, over page-budgets.
 It complements the document \textit{Author's (Alternate) Guide to
@@ -455,7 +452,6 @@ conference proceedings \cite{clark:pct} or
 books \cite{salas:calculus, Lamport:LaTeX} listed
 in the Bibliography section of your
 article will occur throughout the text of your article.
-You will note that \cite{mypublication} and \cite{myotherpublication} were written by me, so in blind mode, it will use the \texttt{personal-anon.bib} file. 
 You should use BibTeX to automatically produce this bibliography;
 you simply need to insert one of several citation commands with
 a key of the item cited in the proper location in
@@ -477,6 +473,13 @@ of the citation command, using \texttt{{\char'134}cite}.
 This is what is stipulated in the SIGS style specifications.
 No other citation format is endorsed or supported.
 
+\subsubsection{Blind Review}
+A convenient flag has been provided that will allow you to easily mask any text or reference that could be used to identify you as the author. To enable the feature, uncomment the \texttt{\textbackslash toggletrue{blindreview}} line near the top of the file. 
+
+To mask text that will identify you, place the text you want to hide inside the \textbackslash anonymize function. If you have enabled the blind review feature by uncommenting the \texttt{\textbackslash toggletrue{blindreview}} line, \anonymize{you will notice that this text has been blackened out and you don't need to rewrite it when it is time to publish}. Comment the line \texttt{\textbackslash toggletrue{blindreview}} when you are ready to publish. 
+
+Additionally, you will need to separate your personal references into two separate files. These have been named in this example \texttt{personal.bib} and \texttt{personal-anon.bib}. Mask all identifying information in the \texttt{personal-anon.bib} file, however, keep the citation key the same as that in your \texttt{personal.bib}.
+You will note that \cite{mypublication} and \cite{myotherpublication} were written by me, so in blind mode, it will use the \texttt{personal-anon.bib} file. When switching to and from \texttt{blind} mode, you may need to delete your auxiliary files or do a bibliography refresh to clear the \LaTeX\ cache..
 
 \subsection{Links}
 
@@ -510,7 +513,7 @@ and the \textbf{.cls} and \textbf{.tex} files that it describes.
 % produce the bibliography for the citations in your paper.
 \bibliographystyle{abbrv}
 
-\iftoggle{anonbibliography}{%
+\iftoggle{blindreview}{%
 	\bibliography{nime-references,personal-anon}
 }{%
 	\bibliography{nime-references,personal} 
