Added some comments

--- a/nime-template.tex
+++ b/nime-template.tex
@@ -11,12 +11,13 @@
 % This file should be compiled with "nime-alternate.cls"
 
 \documentclass{nime-alternate} % Uncomment when publishing final version
+
 \usepackage{etoolbox}
 \newtoggle{blindreview}
 \togglefalse{blindreview} % Leave this intact as it is our default
 
-
-% uncomment this line to make blind
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% uncomment line below to make blind
 %\toggletrue{blindreview} 
 
 
