--- a/personal.bib
+++ b/personal.bib
@@ -8,6 +8,17 @@
 	MONTH = "November",
 	YEAR = {1993}	}
 
+@ARTICLE{mypublication-hidden,
+	AUTHOR = "*********",
+	TITLE = "***********",
+	JOURNAL = "******",
+	VOLUME = {*},
+	NUMBER = {*},
+	PAGES = {****},
+	MONTH = "****",
+	YEAR = {****}	}
+
+
 @ARTICLE{myotherpublication,
 	AUTHOR = "I. M. Author",
 	TITLE = "This is another one of my publications",
@@ -17,3 +28,13 @@
 	PAGES = {111-222},
 	MONTH = "April",
 	YEAR = {2010}	}
+
+@ARTICLE{myotherpublication-hidden,
+	AUTHOR = "*********",
+TITLE = "***********",
+JOURNAL = "******",
+VOLUME = {*},
+NUMBER = {*},
+PAGES = {****},
+MONTH = "****",
+YEAR = {****}	}
